# brickbyte

./: README.md  pyproject.toml
integrations/destination-databricks-py/: pyproject.toml
integrations/destination-databricks-py/destination_databricks/: writer.py
notebooks/: _setup.ipynb  _setup.py  brickbyte-confluence.ipynb  brickbyte-confluence.py  brickbyte-datadog.ipynb  brickbyte-datadog.py  brickbyte-example.ipynb  brickbyte-example.py  brickbyte-github.ipynb  brickbyte-github.py
src/brickbyte/: __init__.py  destination.py  preview.py  types.py  writer.py
src/brickbyte/enrichment/: __init__.py  semantic.py
src/brickbyte/writers/: __init__.py  base.py  spark_streaming_writer.py  sql_streaming_writer.py
tests/: test_base_writer.py  test_buffer_thresholds.py  test_functional.py  test_hybrid.py  test_mode_validation.py  test_preview.py  test_spark_streaming_writer.py  test_streaming.py
